--- a/dataverse-webapp/src/main/webapp/filesFragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/filesFragment.xhtml
@@ -208,7 +208,7 @@
                 <div class="text-muted small">
                     <!-- id:#{fileMetadata.dataFile.id} -->
                     <h:outputText id="fileTypeOutputRegular" value="#{fileMetadata.dataFile.friendlyType}" rendered="#{!(fileMetadata.dataFile.tabularData)}"/>
-                    <h:outputText id="fileTypeOutputTabular" value="#{bundle['file.type.tabular_data']}" rendered="#{fileMetadata.dataFile.tabularData}"/>
+                    <h:outputText id="fileTypeOutputTabular" value="#{bundle['file.type.tabularData']}" rendered="#{fileMetadata.dataFile.tabularData}"/>
                     <h:outputText id="fileSize" value=" - #{fileMetadata.dataFile.friendlySize}" />
 
                     <h:outputText id="fileCreatePublishDate" value=" - #{fileMetadata.getFileDateToDisplay()}" rendered="#{!(empty fileMetadata.id)}"/>
