--- a/dataverse-webapp/src/main/webapp/reorderdatafiles.xhtml
+++ b/dataverse-webapp/src/main/webapp/reorderdatafiles.xhtml
@@ -48,7 +48,7 @@
                         <div class="text-muted small">
                             <h:outputText id="fileTypeOutputRegular" value="#{fileMetadata.dataFile.friendlyType}"
                                           rendered="#{!(fileMetadata.dataFile.tabularData)}"/>
-                            <h:outputText id="fileTypeOutputTabular" value="#{bundle['file.type.tabular_data']}"
+                            <h:outputText id="fileTypeOutputTabular" value="#{bundle['file.type.tabularData']}"
                                           rendered="#{fileMetadata.dataFile.tabularData}"/>
                             <h:outputText id="fileSize" value=" - #{fileMetadata.dataFile.friendlySize}"/>
 
